--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <nav class="navbar">
           <div class="container">
             <div class="social-media">
-              <a href="#"><img src="img\linkedin.svg" alt="LinkedIn" /></a>
-              <a href="#"><img src="img\x.svg" alt="X" /></a>
               <a href="#"><img src="img\facebook.svg" alt="Facebook" /></a>
+              <a href="#"><img src="img\x.svg" alt="X" /></a>
+              <a href="#"><img src="img\linkedin.svg" alt="LinkedIn" /></a>
             </div>
             <ul class="menu">
               <li><a href="#home">من نحن</a></li>
               <li><a href="#about">قيمنا</a></li>
-              <li><a href="#numbers">الشركة</a></li>
+              <li><a href="#numbers">الشركة في أرقام</a></li>
               <li><a href="#application">تواصل معنا</a></li>
             </ul>
             <div class="logo">
@@ -61,9 +61,17 @@
       </nav>
     </aside>
     <section class="home" id="home">
+      <div class="logo show-in-mobile">
+        <img src="img\logo.svg" alt="Growink Logo" />
+      </div>
+      <div class="social-media show-in-mobile">
+        <a href="#"><img src="img\facebook.svg" alt="Facebook" /></a>
+        <a href="#"><img src="img\x.svg" alt="X" /></a>
+        <a href="#"><img src="img\linkedin.svg" alt="LinkedIn" /></a>
+      </div>
       <!-- Swiper -->
-      <div class="swiper-container">
-        <div class="swiper-wrapper">
+      <div class="swiper-container hidden-in-mobile">
+        <div class="swiper-wrapper hidden-in-mobile">
           <div class="swiper-slide">
             <img src="img/slider2.svg" alt="Slide 1" />
           </div>
@@ -73,12 +81,42 @@
           <div class="swiper-slide">
             <img src="img/slider3.svg" alt="Slide 3" />
           </div>
+          <div class="swiper-slide">
+            <img src="img/slider4.svg" alt="Slide 4" />
+          </div>
+        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+      </div>
+      <div class="swiper-container show-in-mobile">
+        <div class="swiper-wrapper hidden-in-mobile">
+          <div class="swiper-slide">
+            <img src="img/mobile-slider1.svg" alt="Slide 1" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/mobile-slider2.svg" alt="Slide 2" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/mobile-slider3.svg" alt="Slide 3" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/mobile-slider4.svg" alt="Slide 4" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/mobile-slider5.svg" alt="Slide 4" />
+          </div>
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
       </div>
     </section>
-    <section class="about" id="about">
+    <section class="about main-container" id="about">
+      <input
+        class="show-in-mobile send-btn"
+        type="submit"
+        value="اتصل بنا   "
+      />
+
       <div class="about-container">
         <div class="about-text">
           <h1>حول الشركة</h1>
@@ -91,7 +129,102 @@
           </p>
         </div>
         <div class="about-area">
-          <div class="about-message">
+          <div class="about-message-cover">
+            <div class="top-left-shape"></div>
+            <div class="about-message hidden-in-mobile">
+              <div class="message-header">
+                <div class="icon"><img src="img/icon1.svg" alt="" /></div>
+                <div><h2>الرسالة</h2></div>
+              </div>
+              <p class="text-area">
+                التوسع الاستثماري في مختلف قطاعات التجارة، وتحقيق مزيد من النمو
+                من خلال مبادرات ومشاريع متنوعة تستهدف العديد من الأسواق المحلية
+                والعالمية
+              </p>
+            </div>
+            <div class="about-message show-in-mobile">
+              <div class="message-header">
+                <div class="icon"><img src="img/icon2.svg" alt="" /></div>
+                <div><h2>الرؤية</h2></div>
+              </div>
+              <p class="text-area">
+                نطمح لابتكار مشاريع تجارية ذات كفاءة عالية، متبعين أفضل نماذج
+                العمل نجاحاً
+              </p>
+            </div>
+          </div>
+          <div class="about-vision-cover">
+            <div class="top-left-shape"></div>
+            <div class="about-vision hidden-in-mobile">
+              <div class="message-header">
+                <div class="icon"><img src="img/icon2.svg" alt="" /></div>
+                <div><h2>الرؤية</h2></div>
+              </div>
+              <p class="text-area">
+                نطمح لابتكار مشاريع تجارية ذات كفاءة عالية، متبعين أفضل نماذج
+                العمل نجاحاً
+              </p>
+            </div>
+            <div class="about-vision show-in-mobile">
+              <div class="message-header">
+                <div class="icon"><img src="img/icon6.svg" alt="" /></div>
+                <div><h2>الأهداف</h2></div>
+              </div>
+              <p class="text-area">الريادة, الجودة الثقة, الكفاءة, الإبداع</p>
+            </div>
+          </div>
+        </div>
+        <div class="hidden-in-mobile"><h1>قيمنا</h1></div>
+        <div class="logos-cover">
+          <div class="hidden-in-mobile">
+            <div class="top-right-shape"></div>
+            <div class="bottom-left-shape"></div>
+          </div>
+          <div class="top-left-shape"></div>
+          <div class="logos hidden-in-mobile">
+            <div class="one-logo">
+              <div class="h2-cover">
+                <h2>الجودة</h2>
+              </div>
+              <div class="logo-cover">
+                <img class="about-logo" src="img/logo1.svg" alt="" />
+              </div>
+            </div>
+            <div class="one-logo">
+              <div class="h2-cover">
+                <h2>الثقة</h2>
+              </div>
+              <div class="logo-cover">
+                <img class="about-logo" src="img/logo2.svg" alt="" />
+              </div>
+            </div>
+            <div class="one-logo">
+              <div class="h2-cover">
+                <h2>الكفاءة</h2>
+              </div>
+              <div class="logo-cover">
+                <img class="about-logo" src="img/logo3.svg" alt="" />
+              </div>
+            </div>
+            <div class="one-logo">
+              <div class="h2-cover">
+                <h2>الريادة</h2>
+              </div>
+              <div class="logo-cover">
+                <img class="about-logo" src="img/logo4.svg" alt="" />
+              </div>
+            </div>
+            <div class="one-logo">
+              <div class="h2-cover">
+                <h2>الإبداع</h2>
+              </div>
+              <div class="logo-cover">
+                <img class="about-logo" src="img/logo5.svg" alt="" />
+              </div>
+            </div>
+          </div>
+
+          <div class="show-in-mobile logos">
             <div class="message-header">
               <div class="icon"><img src="img/icon1.svg" alt="" /></div>
               <div><h2>الرسالة</h2></div>
@@ -102,87 +235,64 @@
               والعالمية
             </p>
           </div>
-          <div class="about-vision">
-            <div class="message-header">
-              <div class="icon"><img src="img/icon2.svg" alt="" /></div>
-              <div><h2>الرؤية</h2></div>
-            </div>
-            <p class="text-area">
-              نطمح لابتكار مشاريع تجارية ذات كفاءة عالية، متبعين أفضل نماذج
-              العمل نجاحاً
-            </p>
-          </div>
-        </div>
-        <h1>قيمنا</h1>
-        <div class="logos-cover">
-          <div class="top-right-shape"></div>
-          <div class="bottom-left-shape"></div>
-          <div class="logos">
-            <div class="one-logo">
-              <h2>الجودة</h2>
-              <img class="about-logo" src="img/logo1.svg" alt="" />
-            </div>
-            <div class="one-logo">
-              <h2>الثقة</h2>
-              <img class="about-logo" src="img/logo2.svg" alt="" />
-            </div>
-            <div class="one-logo">
-              <h2>الكفاءة</h2>
-              <img class="about-logo" src="img/logo3.svg" alt="" />
-            </div>
-            <div class="one-logo">
-              <h2>الريادة</h2>
-              <img class="about-logo" src="img/logo4.svg" alt="" />
-            </div>
-            <div class="one-logo">
-              <h2>الإبداع</h2>
-              <img class="about-logo" src="img/logo5.svg" alt="" />
-            </div>
-          </div>
         </div>
       </div>
     </section>
-    <section class="numbers" id="numbers">
+    <section class="numbers main-container" id="numbers">
       <div class="numbers-area">
         <h1>الشركة في أرقام</h1>
         <div class="numbers-cover">
           <div class="numbers-top-right-shape"></div>
           <div class="numbers-bottom-left-shape"></div>
           <div class="numbers-container">
-            <div class="numbers-item1">
-              <div class="count-text1">
-                <div class="counter1">+60,000</div>
-                <div class="text1">عميل سعيد</div>
-              </div>
-              <div class="image1"><img src="img/icon3.svg" alt="" /></div>
-            </div>
-            <div class="numbers-item2">
-              <div class="count-text1">
-                <div class="counter1">+2000</div>
-                <div class="text1">
-                  منتج عالي <br />
-                  الجودة
+            <div class="half-container">
+              <div class="numbers-item1">
+                <div class="count-text1">
+                  <div class="counter counter1" data-target="60000">0</div>
+                  <div class="text1">عميل سعيد</div>
                 </div>
+                <div class="image1"><img src="img/icon3.svg" alt="" /></div>
               </div>
-              <div class="image1"><img src="img/icon4.svg" alt="" /></div>
+              <div class="numbers-item2">
+                <div class="count-text1">
+                  <div class="counter counter1" data-target="1500">0</div>
+                  <div class="text1 hidden-in-mobile">
+                    منتج عالي <br />
+                    الجودة
+                  </div>
+                  <div class="text1 show-in-mobile">منتج عالي الجودة</div>
+                </div>
+                <div class="image1"><img src="img/icon4.svg" alt="" /></div>
+              </div>
             </div>
-            <div class="numbers-item3">
+            <div class="hidden-in-mobile numbers-item3">
               <div class="image1"><img src="img/icon5.svg" alt="" /></div>
-              <div class="counter3">8</div>
+              <div class="counter counter3" data-target="8">0</div>
               <div class="text3">
                 مستودعات <br />
                 محليّة للتوصيل <br />
                 السريع
               </div>
             </div>
+            <div class="numbers-item1 show-in-mobile">
+              <div class="count-text1">
+                <div class="counter counter1" data-target="8">0</div>
+                <div class="text1">
+                  مستودعات محليّة <br />
+                  للتوصيل السريع
+                </div>
+              </div>
+              <div class="image1"><img src="img/icon5.svg" alt="" /></div>
+            </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="application" id="application">
+    <section class="application main-container" id="application">
+      <h1>اتصل بنا</h1>
       <div class="application-cover">
-        <div class="application-top-right-shape"></div>
-        <div class="application-bottom-left-shape"></div>
+        <div class="hidden-in-mobile application-top-right-shape"></div>
+        <div class="hidden-in-mobile application-bottom-left-shape"></div>
         <div class="application-container">
           <div class="area1">
             <div>
@@ -237,13 +347,18 @@
               <textarea
                 name="text"
                 id="text"
-                rows="10"
+                rows="8"
                 placeholder="اكتب لنا ما الذي تتوقعه من فريق Growink"
               ></textarea>
             </div>
           </div>
           <div class="area3">
-            <input type="submit" value="إرسال" />
+            <input class="send-btn" type="submit" value="ارسال   " />
+            <input
+              class="show-in-mobile clr-btn"
+              type="submit"
+              value="مسح الاستبيان   "
+            />
           </div>
         </div>
       </div>
